force-app/main/default/objects/Loop__PDF_Stamp__c/fields/Loop__Background_Color__c.field-meta.xml
<CustomField>
    <fullName>Loop__Background_Color__c</fullName>
    <label>Background Color</label>
    <length>20</length>
    <type>Text</type>
</CustomField>