force-app/main/default/objects/Loop__PDF_Stamp__c/fields/Loop__Background_Padding__c.field-meta.xml
<CustomField>
    <fullName>Loop__Background_Padding__c</fullName>
    <inlineHelpText>Number of pixels of padding to add of the Background Color behind the text.</inlineHelpText>
    <label>Background Padding</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>