force-app/main/default/objects/Loop__PDF_Stamp__c/fields/Loop__Delivery_Methods__c.field-meta.xml
<CustomField>
    <fullName>Loop__Delivery_Methods__c</fullName>
    <label>Delivery Methods</label>
    <type>TextArea</type>
</CustomField>