force-app/main/default/objects/Loop__PDF_Stamp__c/fields/Loop__HAlign__c.field-meta.xml
<CustomField>
    <fullName>Loop__HAlign__c</fullName>
    <label>Horizontal Alignment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Left</fullName>
            </value>
            <value>
                <fullName>Right</fullName>
            </value>
            <value>
                <fullName>Center</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>