force-app/main/default/objects/Loop__PDF_Stamp__c/fields/Loop__Order__c.field-meta.xml
<CustomField>
    <fullName>Loop__Order__c</fullName>
    <label>Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>