force-app/main/default/objects/Loop__PDF_Stamp__c/fields/Loop__Scale_By__c.field-meta.xml
<CustomField>
    <fullName>Loop__Scale_By__c</fullName>
    <label>Scale By</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Percent</fullName>
            </value>
            <value>
                <fullName>Pixel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>