force-app/main/default/objects/Loop__PDF_Stamp__c/fields/Loop__Type__c.field-meta.xml
<CustomField>
    <fullName>Loop__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Text</fullName>
                <default>true</default>
                <label>Text</label>
            </value>
            <value>
                <fullName>Image</fullName>
            </value>
            <value>
                <fullName>Rectangle</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>